---
source: src/test.rs
expression: evaluate_example(path)
input_file: tests/table2.nu
---
==== COMPILER ====
0: String (7 to 8) "a"
1: String (10 to 11) "b"
2: List(ListId(0)) (6 to 11) - sub_nodes: 0,1
3: Int (20 to 21) "1"
4: Int (23 to 24) "2"
5: List(ListId(1)) (19 to 24) - sub_nodes: 3,4
6: Int (31 to 32) "3"
7: Int (34 to 35) "4"
8: List(ListId(2)) (30 to 35) - sub_nodes: 6,7
9: Table(TableId(0)) (0 to 37) - sub_nodes: header: 2, rows: 5,8
10: Block(BlockId(0)) (0 to 38) - sub_nodes: 9
==== SCOPE ====
0: Frame Scope, node_id: NodeId(10) (empty)
==== TYPES ====
0: unknown
1: unknown
2: unknown
3: unknown
4: unknown
5: unknown
6: unknown
7: unknown
8: unknown
9: error
10: error
==== TYPE ERRORS ====
Error (NodeId 9): Expected an expression to typecheck, got 'Table(TableId(0))'
==== IR ====
register_count: 0
file_count: 0
==== IR ERRORS ====
Error (NodeId 9): node Table(TableId(0)) not suported yet

